이미지 로런하게 수정

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,9 +38,10 @@ services:
    - rolling-fe-be 
    
  mydiary-front: 
-  build:
-   context: ./my-diary-front
-   dockerfile: Dockerfile 
+   # build:
+   # context: ./my-diary-front
+   #dockerfile: Dockerfile
+  image: seokmingg/mydiary-front:2.0
   container_name: rolling-front 
   restart: always 
   depends_on: 
